--- a/app/src/main/res/layout/comic_detail.xml
+++ b/app/src/main/res/layout/comic_detail.xml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
-            type="com.pasotti.matteo.wikiheroes.view.ui.detail_items.detail_comic.DetailComicUIViewModel"/>
+            type="com.pasotti.matteo.wikiheroes.view.ui.detail_items.detail_comic.DetailComicUIViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/body"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -34,78 +35,158 @@
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
                     app:blurImageUrl="@{viewModel.urlImage}"
-                    tools:background="@drawable/background"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:background="@drawable/background" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:layout_constraintTop_toTopOf="parent"
+                    android:background="@color/black60"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:background="@color/black60"/>
-
-                <ImageView
-                    android:id="@+id/image_detail"
-                    android:layout_width="160dp"
-                    android:layout_height="220dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="?attr/actionBarSize"
-                    android:scaleType="fitXY"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:transitionName="@string/transition_detail_image"
-                    tools:background="@drawable/spiderman_comic" />
-
-                <TextView
-                    android:id="@+id/title_detail"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/product_sans_bold"
-                    android:textColor="@android:color/white"
-                    tools:text="Title"
-                    android:textSize="14sp"
-                    android:maxLines="2"
-                    android:ellipsize="end"
-                    android:transitionName="@string/transition_detail_title"
-                    android:layout_marginTop="?attr/actionBarSize"
-                    android:layout_marginStart="16dp"
-                    app:layout_constraintStart_toEndOf="@+id/image_detail"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
-
-                <TextView
-                    android:id="@+id/description_detail"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/product_sans_bold"
-                    android:textColor="@android:color/white"
-                    app:layout_constraintTop_toBottomOf="@+id/image_detail"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:maxLines="10"
-                    android:ellipsize="end"
-                    android:text="@{viewModel.description}"/>
-
-
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <include
-                android:id="@+id/toolbarComicDetail"
-                layout="@layout/toolbar_main"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="match_parent">
+
+                <include
+                    android:id="@+id/toolbarComicDetail"
+                    layout="@layout/toolbar_main"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ScrollView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:background="@color/fui_transparent"
+                    android:scrollbars="none"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/toolbarComicDetail">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+
+                        <ImageView
+                            android:id="@+id/image_detail"
+                            android:layout_width="160dp"
+                            android:layout_height="220dp"
+                            android:layout_marginStart="20dp"
+                            android:scaleType="fitXY"
+                            android:transitionName="@string/transition_detail_image"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:background="@drawable/spiderman_comic" />
+
+                        <TextView
+                            android:id="@+id/title_detail"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginTop="?attr/actionBarSize"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/product_sans_bold"
+                            android:maxLines="3"
+                            android:textColor="@android:color/white"
+                            android:textSize="14sp"
+                            android:transitionName="@string/transition_detail_title"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/image_detail"
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:text="Title" />
+
+                        <TextView
+                            android:id="@+id/publishedLabel"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginTop="30dp"
+                            android:fontFamily="@font/product_sans_bold"
+                            android:text="Published:"
+                            android:textColor="@android:color/white"
+                            android:textSize="14sp"
+                            android:visibility="@{viewModel.publishedDateVisibility}"
+                            app:layout_constraintStart_toEndOf="@+id/image_detail"
+                            app:layout_constraintTop_toBottomOf="@+id/title_detail"
+                            tools:text="Published:" />
+
+                        <TextView
+                            android:id="@+id/published_date"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginTop="5dp"
+                            android:fontFamily="@font/product_sans_italic"
+                            android:text="@{viewModel.publishDate}"
+                            android:textColor="@android:color/white"
+                            android:textSize="14sp"
+                            android:visibility="@{viewModel.publishedDateVisibility}"
+                            app:layout_constraintStart_toEndOf="@+id/image_detail"
+                            app:layout_constraintTop_toBottomOf="@+id/publishedLabel"
+                            tools:text="28/12/1992" />
+
+                        <TextView
+                            android:id="@+id/price"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="20dp"
+                            android:fontFamily="@font/product_sans_italic"
+                            android:text="@{viewModel.price}"
+                            android:textColor="@android:color/white"
+                            android:visibility="@{viewModel.priceVisibility}"
+                            app:layout_constraintBaseline_toBaselineOf="@+id/published_date"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            tools:text="£2.95" />
+
+                        <TextView
+                            android:id="@+id/description_detail"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginEnd="20dp"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/product_sans_italic"
+                            android:maxLines="10"
+                            android:text="@{viewModel.description}"
+                            android:textColor="@android:color/white"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/image_detail" />
+
+                        <FrameLayout
+                            android:id="@+id/container_more_comics"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="20dp"
+                            android:visibility="@{viewModel.moreComicsVisibility}"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/description_detail" />
+
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </ScrollView>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         </FrameLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
