--- a/app/src/main/res/layout/item_more_gallery.xml
+++ b/app/src/main/res/layout/item_more_gallery.xml
@@ -16,7 +16,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:background="@color/mid_black"
+        android:background="@color/fui_transparent"
         android:layout_marginRight="10dp">
 
 
@@ -37,13 +37,11 @@
 
                 <!-- app:imageUrl="@{detail.}" -->
                 <ImageView
-                    android:id="@+id/image_gallery"
+                    android:id="@+id/image_more_gallery"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:galleryImageUrl="@{url}"
                     android:scaleType="fitXY"
-                    android:adjustViewBounds="true"
-                    android:transitionName="@string/transition_detail_image"
                     android:contentDescription="@string/image_gallery_content_descriptor"
                     tools:src="@drawable/margeto" />
 
