--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,82 +4,137 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="character"
-            type="com.pasotti.matteo.wikiheroes.models.Character"/>
+            type="com.pasotti.matteo.wikiheroes.models.Character" />
     </data>
 
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/body"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/black">
+        android:fitsSystemWindows="true"
+        android:background="@android:color/transparent">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <View
+                android:id="@+id/view_gradient"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/yellow"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <View
+                android:id="@+id/gradient_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/black60"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/fui_transparent"
             android:fitsSystemWindows="true"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsingToolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                app:contentScrim="@drawable/blur_background"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                app:contentScrim="?attr/colorPrimary"
                 app:expandedTitleTextAppearance="@android:color/transparent"
-                android:fitsSystemWindows="true">
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+
+
+                <!-- <ImageView
+                    android:id="@+id/circular_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax"
+                    android:transitionName="@string/transition_character_image"
+                    tools:background="@drawable/ironman" /> -->
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:background="@color/fui_transparent">
 
-                    <ImageView
-                        android:id="@+id/imageCharacter"
-                        android:layout_width="match_parent"
-                        android:layout_height="300dp"
-                        android:scaleType="centerCrop"
-                        app:layout_collapseMode="parallax"
-                        android:transitionName="@string/transition_character_image"
-                        tools:background="@drawable/ironman"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"/>
-
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:background="@drawable/blur_background"
-                        app:layout_constraintBottom_toBottomOf="parent"
+                    <FrameLayout
+                        android:id="@+id/layout_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="?actionBarSize"
+                        android:background="@drawable/circle_white"
+                        android:elevation="3dp"
+                        android:padding="1dp"
+                        app:layout_constraintBottom_toTopOf="@+id/character_name"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <ImageView
+                            android:id="@+id/circular_image"
+                            android:layout_width="200dp"
+                            android:layout_height="200dp"
+                            android:transitionName="@string/transition_character_image"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="parent"
+                            tools:background="@drawable/ironman" />
+
+
+                    </FrameLayout>
+
+                    <TextView
+                        android:id="@+id/character_name"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginEnd="20dp"
+                        android:elevation="3dp"
+                        android:fontFamily="@font/product_sans_bold"
+                        android:gravity="center"
+                        android:text="@{character.name}"
+                        android:textColor="@android:color/white"
+                        android:textSize="28sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/layout_image"
+                        tools:text="Iron Man" />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
 
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbarCharacterDetail"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
-
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-
-
-
         </com.google.android.material.appbar.AppBarLayout>
-
 
         <androidx.core.widget.NestedScrollView
             android:id="@+id/nestedScrollView"
@@ -87,13 +142,6 @@
             android:layout_height="match_parent"
             android:clipToPadding="false"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-            <!-- <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                app:cardElevation="5dp"
-                app:cardUseCompatPadding="true"></android.support.v7.widget.CardView> -->
 
             <LinearLayout
                 android:id="@+id/rootScrollView"
@@ -105,32 +153,32 @@
                     android:id="@+id/characterDescription"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:fontFamily="@font/product_sans_italic"
-                    android:textColor="@android:color/white"
-                    android:layout_marginTop="20dp"
                     android:layout_marginStart="16dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginEnd="16dp"
-                    tools:text="@string/lorem"
-                    android:text="@{character.description}"/>
+                    android:fontFamily="@font/product_sans_italic"
+                    android:text="@{character.description}"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp"
+                    tools:text="@string/lorem" />
 
                 <FrameLayout
                     android:id="@+id/container_comics"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"/>
+                    android:layout_marginTop="20dp" />
 
                 <FrameLayout
                     android:id="@+id/container_series"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"/>
+                    android:layout_marginTop="20dp" />
 
                 <FrameLayout
                     android:id="@+id/container_events"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"/>
+                    android:layout_marginTop="20dp" />
 
 
             </LinearLayout>
@@ -138,7 +186,7 @@
 
         </androidx.core.widget.NestedScrollView>
 
-
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 
 </layout>
